--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <nav>
             <ul>
-                <li><a href="#servicos"></a>SERVIÇOS</li>
-                <li><a href="#clientes">CLIENTES</li>
-                <li><a href="parceiros"></a>PARCEIROS</li>
-                <li><a href="time"></a>TIME</li>
-                <li><a href="contato">CONTATO</li>
+                <li><a href="#servicos">SERVIÇOS</a></li>
+                <li><a href="#clientes">CLIENTES</a></li>
+                <li><a href="#parceiros">PARCEIROS</a></li>
+                <li><a href="#time">TIME</a></li>
+                <li><a href="#contato">CONTATO</a></li>
             </ul>        
         </nav>
 
