--- a/index.html
+++ b/index.html
@@ -1,92 +1,97 @@
 <!DOCTYPE html>
 <html lang='pt-br'>
-
     <head>
         <meta charset="utf-8">
         <title>Minha página</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
-
     <body>
         <nav>
+            <p>Minha página</p>
             <ul>
-                <li><a href="#servicos">SERVIÇOS</a></li>
-                <li><a href="#clientes">CLIENTES</a></li>
-                <li><a href="#parceiros">PARCEIROS</a></li>
-                <li><a href="#time">TIME</a></li>
-                <li><a href="#contato">CONTATO</a></li>
+                <li>
+                    <a href="#servicos">SERVIÇOS</a>
+                </li>
+                <li>
+                    <a href="#clientes">CLIENTES</a>
+                </li>
+                <li>
+                    <a href="#parceiros">PARCEIROS</a>
+                </li>
+                <li>
+                    <a href="#time">TIME</a>
+                </li>
+                <li>
+                    <a href="#contato">CONTATO</a>
+                </li>
             </ul>        
         </nav>
-
         <header>
             <h1>Minha página</h1>
             <p>
                 Oferecemos o desenvolvimento dos melhores sites e apps para sua empresa
             </p>
         </header>
-    
         <section id="servicos">
             <h2>SERVIÇOS</h2>
             <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos</p>
-
             <div>
-                <img src="img/site.jpg" width="300px">
+                <img src="img/site.jpg" width="300px" class="img_padrao">
             </div>
             <div>
-                <img src="img/app.jpg" width="300px">
+                <img src="img/app.jpg" width="300px" class="img_padrao">
             </div>
-
         </section>
-
         <section id="clientes">
             <h2>CLIENTES</h2>
             <p>Nossos cleintes ficaram muito satisfeitos com nossos serviços</p>
-
             <div>
-                <img src="img/cliente1.jpg" width="300px">
+                <img src="img/cliente1.jpg" width="300px" class="img_padrao">
             </div>
             <div>
-                <img src="img/cliente2.jpg" width="300px">
+                <img src="img/cliente2.jpg" width="300px" class="img_padrao">
             </div>
-
         </section>
-        
         <section id="parceiros">
             <h2>PARCEIROS</h2>
             <p>Nosso parceiros nos ajudam a entregar as melhores soluções para nossos clientes</p>
-
             <div>
-                <img src="img/parceiro1.jpg" width="150px">
+                <a href="https://www.google.com/" target="_blank">
+                    <img src="parceiro1.jpg" width="150px" class="img_padrao">
+                </a>
             </div>
             <div>
-                <img src="img/parceiro2.jpg" width="150px">
+                <a href="https://twitter.com/" target="_blank">
+                    <img src="img/parceiro2.jpg" width="150px" class="img_padrao">
+                </a>
             </div>
-
         </section>
-
         <section  id="time">
-            <h2></h2>
+            <h2>TIME</h2>
             <p></p>
-
             <div>
                 <img src="img/time.jpg">
             </div>
             <div>
                 <img src="img/time2.jpg">
             </div>
-
         </section>
-
         <section id="contato">
-            <h2></h2>
-            <p></p>
+            <h2>CONTATO</h2>
+            <p>Entre em contato com nossa equipe.</p>
+            <div>
+                <img src="img/contato.jpg" width="30px" class="img_padrao">
+                <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
+            </div>
+            <div>
+                <img src="img/fone.png" width="30px" class="img_padrao">
+                <p><a href="tel:41999999999">(41)99999-9999</a></p>
+            </div>
         </section>
-
         <footer>
             <p>
                 Desenvolvido por </em>Wilian Silva de Oliveira</em>
             </p>
         </footer>
-
     </body>
-
 </html>
